--- a/themes/site/css/custom.css
+++ b/themes/site/css/custom.css
@@ -17,3 +17,8 @@
     .errorMessage{
         color: #ff0033;
     }
+    
+    .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn){
+        width: 100%;
+    }
+
